force-app/main/default/objects/Lead_Scoring_Table__mdt/Lead_Scoring_Table__mdt.object-meta.xml
<CustomObject>
    <description>Lead Scoring Table</description>
    <label>Lead Scoring Table</label>
    <pluralLabel>Lead Scoring Table</pluralLabel>
</CustomObject>