force-app/main/default/objects/Lead_Scoring_Table__mdt/fields/Binary_Value__c.field-meta.xml
<CustomField>
    <fullName>Binary_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Binary value for Data Field: Binary and Is Null</description>
    <label>Binary Value</label>
    <type>Checkbox</type>
</CustomField>