force-app/main/default/objects/Lead_Scoring_Table__mdt/fields/Data_Field__c.field-meta.xml
<CustomField>
    <fullName>Data_Field__c</fullName>
    <description>Data Field to be used for determining the lead scoring</description>
    <label>Data Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less Than</fullName>
                <default>true</default>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Number Range</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Is Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>