force-app/main/default/objects/Lead_Scoring_Table__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>The field name of the object used to compare for scoring</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>