force-app/main/default/objects/Lead_Scoring_Table__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Lead Score is currently active or not</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>