force-app/main/default/objects/Lead_Scoring_Table__mdt/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>The Market related to the Lead (eg: MY, TH, PH)</description>
    <label>Market</label>
    <length>18</length>
    <type>Text</type>
</CustomField>