force-app/main/default/objects/Lead_Scoring_Table__mdt/fields/Number_Value__c.field-meta.xml
<CustomField>
    <fullName>Number_Value__c</fullName>
    <description>Number Value to be used for Data Field: Equals, Greater Than, Less Than</description>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>