force-app/main/default/objects/Lead_Scoring_Table__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The object in reference to the lead scoring</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>