force-app/main/default/objects/Lead_Scoring_Table__mdt/fields/Range_Max__c.field-meta.xml
<CustomField>
    <fullName>Range_Max__c</fullName>
    <description>The number value of range max</description>
    <label>Range Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>