force-app/main/default/objects/Lead_Scoring_Table__mdt/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The score based on the object, field and value</description>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>