force-app/main/default/objects/Lead_Scoring_Table__mdt/fields/Stackable__c.field-meta.xml
<CustomField>
    <fullName>Stackable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead score is stackable or not</description>
    <label>Stackable</label>
    <type>Checkbox</type>
</CustomField>